Добавил картинки: иконка, кнопка добавления, кнопка удаления

--- a/Todo_list/Todo_list.csproj
+++ b/Todo_list/Todo_list.csproj
@@ -8,4 +8,16 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Images\add.png" />
+    <None Remove="Images\delete.png" />
+    <None Remove="Images\icon.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Images\add.png" />
+    <Resource Include="Images\delete.png" />
+    <Resource Include="Images\icon.png" />
+  </ItemGroup>
+
 </Project>
